# bevy-shooter-tools

./: Cargo.toml  README.md
assets/default/lang/: de-DE.toml  en-US.toml
src/: lib.rs  main.rs  startup.rs
src/common/: cuboid.rs  lang.rs  mod.rs  painter.rs  perf.rs  systems.rs
src/common/item/: item.rs  mod.rs
src/editor/: editable.rs  global_point.rs  input.rs  mod.rs  multicam.rs  panels.rs
src/tool/: bakes.rs  mod.rs  movement.rs  room.rs  selection.rs  show.rs
src/unlock/: mod.rs  particle_effecta.rs  series.rs  series_entry.rs  stat_tracker.rs
