[package]
name = "bevy-shooter-tools"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
bevy = "0.16.0"
bevy_egui = "0.34.1"
iyes_perf_ui = { git = "https://github.com/olekspickle/iyes_perf_ui.git", branch = "main" }

clap = { version = "4.5.31", features = ["derive"] }

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"

lazy_static = "1.5.0"
regex = "1.11.1"

strum = "0.27.1"
strum_macros = "0.26.4"
